--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular",
-  "version": "1.2.15-build.2364+sha.7c34e1f",
+  "version": "1.2.15-build.local+sha.9660989",
   "main": "./angular.js",
   "dependencies": {
   }
