--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular",
-  "version": "1.2.15-build.local+sha.9660989",
+  "version": "1.3.0-local+sha.5cd5e9e",
   "main": "./angular.js",
   "dependencies": {
   }
